Issue 1 (text contrast improvement)

--- a/style.css
+++ b/style.css
@@ -781,7 +781,7 @@ h4 {
 }
 
 .tc-white {
-    color: #364577!important;
+    color: white!important;
 }
 
 .btn-atomic-tangerine {
